Make footer always on the bottom of the page

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -7,3 +7,13 @@
   right: 0;
   z-index: 10000;
 }
+
+.page-container {
+  position: relative;
+  min-height: 100vh;
+  padding-bottom: 2.5rem;
+}
+
+.container {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
